Fix YAML front matter in Uzbekistan.md

--- a/platform2/website/docs/5. Foreign Policy/By Country 4/10. Central Asia/5. Uzbekistan.md
+++ b/platform2/website/docs/5. Foreign Policy/By Country 4/10. Central Asia/5. Uzbekistan.md
@@ -1,6 +1,5 @@
 ---
-**Uzbekistan: Strategic U.S. Foreign Policy Analysis**
-
+title: Uzbekistan: Strategic U.S. Foreign Policy Analysis
 ---
 
 ### **Preface**
