Fix YAML front matter in Polynesia.md

--- a/platform2/website/docs/5. Foreign Policy/By Country 4/19. Oceania/5. Polynesia.md
+++ b/platform2/website/docs/5. Foreign Policy/By Country 4/19. Oceania/5. Polynesia.md
@@ -1,6 +1,5 @@
 ---
-**Polynesia: Strategic U.S. Foreign Policy Analysis**
-
+title: "Polynesia: Strategic U.S. Foreign Policy Analysis"
 ---
 
 ### **Preface**
